# code-normalizer-pro

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  VERIFY.md  main.py  pyproject.toml
.github/workflows/: ci.yml
code_normalizer_pro/: __init__.py  cli.py  code_normalizer_pro.py
tests/: test_code_normalize_pro.py
