[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-normalizer-pro"
version = "3.0.1"
description = "Production-grade code normalization tool for encoding, newlines, and whitespace hygiene."
readme = "README.md"
license = "MIT"
authors = [{name = "Michael Rawls Jr."}]
requires-python = ">=3.10"
dependencies = ["tqdm"]
keywords = ["code-quality", "formatter", "normalization", "cli", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/MRJR0101/Code-Normalizer-Pro"
Documentation = "https://github.com/MRJR0101/Code-Normalizer-Pro/blob/main/README.md"
Issues = "https://github.com/MRJR0101/Code-Normalizer-Pro/issues"

[project.scripts]
code-normalizer-pro = "code_normalizer_pro.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
# Package the CLI wrapper plus the bundled core script.
packages = ["code_normalizer_pro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
# Suppress the Windows .pytest_cache ACL warning
filterwarnings = ["ignore::pytest.PytestCacheWarning"]
